@@ -1,0 +1,52 @@
+<printer id="printer/HP-LaserJet_1020">
+  <make>HP</make>
+  <model>LaserJet 1020</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Cartridge containing toner and imaging drum</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.hp.com/</url>
+  <lang>
+    <proprietary/>
+  <!--no pjl--><!--No "text"?--></lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Hewlett-Packard;MDL:HP LaserJet 1020;CMD:ACL;CLS:PRINTER;DES:HP LaserJet 1020;</ieee1284>
+      <commandset>ACL</commandset>
+      <description>HP LaserJet 1020</description>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>HP LaserJet 1020</model>
+    </general>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver></driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Does not understand any standard language. Works with a &lt;a
+    href="http://support.ideainformatica.com/hplj1020/"&gt;modified
+    version&lt;/a&gt; of the &quot;foo2zjs&quot; driver. Foomatic data
+    and PPD files are in the driver package. It is planned to merge
+    this driver version with the upstream
+    &quot;foo2zjs&quot;.&lt;p&gt;
+
+    The printer is similar to the LaserJet 1000 and 1005.&lt;p&gt;
+
+    The firmware of the printer must be uploaded after turning it
+    on. The modified &quot;foo2zjs&quot; driver package contains a
+    script to do the upload automatically.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
