@@ -1,3 +1,7 @@
+2005-07-15  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-LaserJet_1020.xml: Added the HP LaserJet 1020.
+
 2005-07-13  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* opt/GS-HalftoningAlgorithm-Gray.xml: Added option for choosing
